--- a/PersonalExpenseTracker.ipynb
+++ b/PersonalExpenseTracker.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP6T1sc5rSTU3eWOCa6zCq8",
+      "authorship_tag": "ABX9TyPALpeoZC8Ek81py5rjs1YQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,7 +111,7 @@
         "            writer.writeheader()\n",
         "            for expense in self.expenses:\n",
         "                writer.writerow(expense)\n",
-        "        print(\"✅ Expenses saved.\")\n",
+        "        print(\"\\n✅ Expenses saved.\")\n",
         "\n",
         "    def save_budget(self) -> None:\n",
         "        \"\"\"\n",
@@ -133,6 +133,7 @@
         "        Prompts the user to enter details for a new expense and adds it to the class's expenses list.\n",
         "        Includes validation for date, category, and amount.\n",
         "        \"\"\"\n",
+        "        print(\"\\n📝 Enter expense details:\")\n",
         "        while True:\n",
         "            date: str = input(\"Enter date (YYYY-MM-DD): \")\n",
         "            if re.match(r'\\d{4}-\\d{2}-\\d{2}', date):\n",
@@ -188,7 +189,7 @@
         "        Handles invalid input.\n",
         "        \"\"\"\n",
         "        try:\n",
-        "            self.budget = float(input(\"Enter your monthly budget: \"))\n",
+        "            self.budget = float(input(\"\\nEnter your monthly budget: \"))\n",
         "            print(f\"✅ Budget set to ${self.budget:.2f}\")\n",
         "            self.save_budget()\n",
         "        except ValueError:\n",
@@ -332,13 +333,17 @@
         "            else:\n",
         "                print(\"❌ Invalid choice. Please try again.\")"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6a776252"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6a776252",
+        "outputId": "c197e225-a0cd-4567-f901-60c64e6052aa"
       },
       "source": [
         "# Create an instance of the ExpenseTracker class\n",
@@ -347,7 +352,57 @@
         "tracker.menu()"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ℹ️ Expenses file 'expenses.csv' loaded.\n",
+            "💲 Budget file 'budget.txt' loaded.\n",
+            "\n",
+            "👋 Welcome to your personal expense tracker!\n",
+            "\n",
+            "📌 Expenses Menu:\n",
+            "1. Add expense\n",
+            "2. View expenses\n",
+            "3. Track budget\n",
+            "4. Save expenses and budget\n",
+            "5. Save expenses and budget then exit\n",
+            "6. Exit (no save)\n",
+            "Choose an option (1-6): v\n",
+            "❌ Invalid choice. Please try again.\n",
+            "\n",
+            "📌 Expenses Menu:\n",
+            "1. Add expense\n",
+            "2. View expenses\n",
+            "3. Track budget\n",
+            "4. Save expenses and budget\n",
+            "5. Save expenses and budget then exit\n",
+            "6. Exit (no save)\n",
+            "Choose an option (1-6): 2\n",
+            "\n",
+            "📋 Your Expenses:\n",
+            "1. 2025-10-10 | Food | $15.00 | burger\n",
+            "\n",
+            "📌 Expenses Menu:\n",
+            "1. Add expense\n",
+            "2. View expenses\n",
+            "3. Track budget\n",
+            "4. Save expenses and budget\n",
+            "5. Save expenses and budget then exit\n",
+            "6. Exit (no save)\n",
+            "Choose an option (1-6): 3\n",
+            "\n",
+            "💰 Total spent: $15.00\n",
+            "🟢 You have $85.00 of your $100.00 budget left for the month.\n",
+            "\n",
+            "📌 Budget Menu::\n",
+            "1. Set budget\n",
+            "2. View monthly spend\n",
+            "3. Return to main menu\n"
+          ]
+        }
+      ]
     }
   ]
 }
